[package]
name = "web_browser"
version = "0.1.0"
authors = ["gann <garedaiki@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.conrod]
version = "0.61.1"
features = ["glium", "winit"]

[dependencies]
find_folder = "*"